complete catalog module